# ss-cpp

./: .pre-commit-config.yaml  .renovaterc.json  CMakeLists.txt  Makefile  noxfile.py  vcpkg.json
.github/workflows/: auto-approval.yml  cd.yml  ci.yml  codeql.yml  preview.yml  renovate.yml
template/: .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .renovaterc.json.jinja  CMakeLists.txt.jinja  Makefile.jinja  [% if repo_platform == 'gitlab.com' or repo_platform == 'gitlab-self-managed' %].gitlab-ci.yml[% endif %]  vcpkg.json.jinja
template/[% if repo_host_type == 'github.com' %].github[% endif %]/workflows/: cd.yml.jinja  ci.yml.jinja  renovate.yml  renovate.yml.jinja
template/[% if repo_platform == 'github' %].github[% endif %]/workflows/: [% if use_codeql == true %]codeql.yml[% endif %].jinja  ci.yml.jinja  renovate.yml.jinja
template/[% if repo_platform == 'gitlab.com' or repo_platform == 'gitlab-self-managed' %].gitlab[% endif %]/templates/: build.yml  pages.yml
template/[% if repo_platform == 'gitlab.com' or repo_platform == 'gitlab-self-managed' %].gitlab[% endif %]/workflows/: cd.yml  ci.yml.jinja  renovate.yml
template/src/[% if add_jni_target == true %]jni[% endif %]/: CMakeLists.txt
template/src/[% if add_jni_target == true %]jni[% endif %]/include/: jvm_util.hpp
template/src/[% if add_jni_target == true %]jni[% endif %]/tests/: CMakeLists.txt  test_jni.cpp
template/src/[% if add_jni_target == true %]jni[% endif %]/tests/java/: CMakeLists.txt
